--- a/deployment.yml
+++ b/deployment.yml
@@ -39,7 +39,7 @@ spec:
   ingressClassName: public-iks-k8s-nginx
   rules:
     - host: sfripp.build-labs-latam-iks-2bef1f4b4097001da9502000c44fc2b2-0000.us-south.containers.appdomain.cloud
-    - http:
+      http:
         paths:
           - path: /
             pathType: Prefix
